[gd_scene load_steps=3 format=2]

[ext_resource path="res://SISTEMA/GLOBAL/AREAS/AreaDamage.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=47]
resource_local_to_scene = true
extents = Vector2( 16.5, 12.25 )

[node name="AreaDamage" type="Area2D"]
collision_layer = 0
input_pickable = false
monitorable = false
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 4.5, 0.25 )
shape = SubResource( 47 )

[connection signal="area_entered" from="." to="." method="_on_AreaDamage_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_AreaDamage_body_entered"]
